--- a/apps/server/templates/module/dig.go.tmpl
+++ b/apps/server/templates/module/dig.go.tmpl
@@ -2,8 +2,13 @@ package {{.ModuleName}}
 
 import "go.uber.org/dig"
 
-func RegisterDependencies(container *dig.Container) {
-	container.Provide(NewMongoRepository)
+func RegisterDependencies(container *dig.Container, cfg *config.Config) {
+	switch cfg.DBType {
+	case "postgres", "postgresql", "mysql", "sqlite":
+		container.Provide(NewSQLRepository)
+	case "mongo":
+		container.Provide(NewMongoRepository)
+	}
 	container.Provide(NewService)
 	container.Provide(NewController)
 	container.Provide(NewRoute)
